# sealupd

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  check.yml
src/: cli.rs  consts.rs  log.rs  main.rs  proc.rs  proc_wait.rs  term_color.rs  util.rs
src/decompress/: error.rs  mod.rs  tar.rs  util.rs  zip.rs
