[package]
    name    = "sealupd"
    version = "0.1.0"
    edition = "2021"

[profile.release]
    strip         = true
    opt-level     = 'z'
    lto           = true
    codegen-units = 1
    panic         = "abort"

[dependencies]
    # Command-line parser
    clap = { version = "4.5.20", features = ["derive"] }

    # System info
    sysinfo = "0.32.0"

    # Logging
    log    = "0.4.22"
    fern   = "0.7.0"
    chrono = "0.4.38"

    # File archives
    zip    = "2.2.0"
    tar    = "0.4.42"
    flate2 = "1.0.34"

[build-dependencies]
    # Static links on Windows
    static_vcruntime = "2.0.0"

    # Manifest files for 32-bit Windows
    embed-manifest = "1.4.0"
